# HimiiEngine

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.py  build.sh  build_py.bat  imgui.ini  index.html  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  deploy-docs.yml
Docs/: ECS_Entt_入门与实战.md  README.md  Roadmap.md  mkdocs.yml  场景序列化实现思路.md  技术总览_引擎与编辑器.html  技术总览_引擎与编辑器.md  项目目录解释.md
Docs/DevManual/: README.md
Docs/UserManual/: EditorInterface.md  ScriptingAPI.md
Docs/docs/: Roadmap.md  index.md
Docs/docs/开发手册/: BuildingFromSource.md
Docs/docs/用户手册/: GettingStarted.md  Physics2D.md  README.md
Engine/: CMakeLists.txt  CMakePresets.json  Engine.cpp
Engine/include/Base/: Singleton.h
Engine/src/: Engine.cpp  Engine.h  Hepch.h
Engine/src/Core/: Application.cpp  Application.h  Core.h  Engine.cpp  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h
Engine/src/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Himii/Asset/: Asset.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetSerializer.cpp  AssetSerializer.h
Engine/src/Himii/Core/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Engine/src/Himii/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Himii/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Himii/Instrument/: Instrumentor.h
Engine/src/Himii/Math/: Math.cpp  Math.h
Engine/src/Himii/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Engine/src/Himii/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Engine/src/Himii/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h  SpriteAnimation.h
Engine/src/Himii/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Engine/src/Himii/Utils/: PlatformUtils.h
Engine/src/Platform/: WindowsWindow.cpp  WindowsWindow.h
Engine/src/Platform/Linux/: LinuxPlatformUtils.cpp
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_opengl3.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
HimiiEditor/: CMakeLists.txt  GameAssembly.csproj
HimiiEditor/assets/: GameAssembly.csproj
HimiiEditor/assets/SandBox/: GameAssembly.csproj  SandBox.hproj  SandBox.sln
HimiiEditor/assets/SandBox/SandBox/: GameAssembly.csproj
HimiiEditor/assets/SandBox/SandBox/assets/scenes/: Test.himii
HimiiEditor/assets/SandBox/assets/scenes/: Debug.himii  Test.himii
HimiiEditor/assets/SandBox/assets/scripts/: Player.cs
HimiiEditor/assets/shaders/: Renderer2D_Circle.glsl  Renderer2D_Quad.glsl  Skybox.glsl  Texture.glsl
HimiiEditor/scr/: EditorLayer.h  HimiiApp.cpp
HimiiEditor/src/: CamerController.h  EditorLayer.cpp  EditorLayer.h  HimiiApp.cpp
HimiiEditor/src/panel/: AnimationPanel.cpp  AnimationPanel.h  ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
HimiiEngine/: CMakeLists.txt
HimiiEngine/HimiiEngine/: CMakeLists.txt  HimiiEngine.cpp  HimiiEngine.h
HimiiProject/: CMakeLists.txt
HimiiProject/scr/: HimiiProject.cpp  MainScene.cpp  MainScene.h  UILayer.cpp  UILayer.h
HimiiRuntime/: CMakeLists.txt  CmakeLists.txt
HimiiRuntime/assets/scripts/: Player.cs
HimiiRuntime/assets/shaders/: FlatColor.glsl
HimiiRuntime/src/: RuntimeApp.cpp
Roadmap/: index.html
ScriptCore/: CMakeLists.txt  ScriptCore.csproj
ScriptCore/Scripts/: Player.cs
ScriptCore/Source/: Entity.cs  Input.cs  InternalCalls.cs  Interop.cs  KeyCode.cs  NativeStrcuts.cs  NativeStructs.cs  ScriptManager.cs  Vector2.cs  Vector3.cs  Vector4.cs
ScriptCore/Source/Scene/: Component.cs  Entity.cs
TemplateProject/: CMakeLists.txt  CubeLayer.cpp  CubeLayer.h  EditorLayer.cpp  EditorLayer.h  Example2D.cpp  Example2D.h  ExampleLayer.cpp  ExampleLayer.h  Move2DScript.h  Perlin.h  TemplateProject.cpp  Terrain.cpp  Terrain.h  TerrainScript.h
TemplateProject/assets/: GameAssembly.csproj  Player.cs
TemplateProject/assets/shaders/: FlatColor.glsl  LitTexture.glsl  Picking.glsl  Texture.glsl
search/: search_index.json
开发手册/: index.html
开发手册/Architecture/: index.html
开发手册/BuildingFromSource/: index.html
开发手册/CoreSystems/Serialization/: index.html
用户手册/: index.html
用户手册/EditorInterface/: index.html
用户手册/GettingStarted/: index.html
用户手册/Physics2D/: index.html
用户手册/ScriptingAPI/: index.html
